<resources>
    <string name="app_name">CRUD App</string>
    <string name="document_list">Lista dokumentów</string>
    <string name="document_id">Numer dokumentu:</string>
    <string name="document_date">Data dokumentu:</string>
    <string name="customer">Klient:</string>
    <string name="positions_count">Liczba pozycji:</string>
    <string name="net_gross_value">Wartość netto / brutto:</string>
    <string name="net_gross_price">Cena netto / brutto:</string>
    <string name="edit_document">Edytuj dokument</string>
    <string name="remove_document">Usuń dokument</string>
    <string name="add_document">Utwórz nowy dokument</string>
    <string name="net_gross_with_currency">%s zł / %s zł</string>
    <string name="customer_id_and_name">(%s) %s</string>
    <string name="edit_document_id">Edycja dokumentu %s</string>
    <string name="new_document">Nowy dokument</string>
    <string name="close_dialog">Zamknij dialog</string>
    <string name="document_with_id">Dokument %d</string>
    <string name="product_name">Nazwa produktu</string>
    <string name="product">Produkt:</string>
    <string name="amount">Ilość</string>
    <string name="amount_">Ilość:</string>
    <string name="document_deleted">Usunięto dokument i jego pozycje</string>
    <string name="document_delete_error">Usunięcie dokumentu nie powiodło się</string>
    <string name="customer_id">Id klienta:</string>
    <string name="customer_name">Nazwa klienta</string>
    <string name="customer_name_">Nazwa klienta:</string>
    <string name="document_positions">Pozycje dokumentu:</string>
    <string name="add_position">Dodaj pozycję dokumentu</string>
    <string name="net_price">Cena netto:</string>
    <string name="gross_price">Cena brutto:</string>
    <string name="price">Cena</string>
    <string name="remove_position">Usuń pozycję</string>
    <string name="edit_position">Edytuj pozycję</string>
    <string name="cancel">Anuluj</string>
    <string name="document_saved">Dokument został zapisany</string>
    <string name="document_save_error">Nie udało się zapisać dokumentu</string>
    <string name="delete">Usuń</string>
    <string name="delete_confirmation_message">Czy na pewno chcesz usunąć dokument %d?</string>
    <string name="document_deleting">Usuwanie dokumentu</string>
    <string name="add_customer">Dodaj klienta</string>
    <string name="edit_customer">Edytuj klienta</string>
    <string name="delete_customer">Usuń klienta</string>
    <string name="save">Zapisz</string>
    <string name="documents">Dokumenty</string>
    <string name="customers">Klienci</string>
    <string name="products">Produkty</string>
    <string name="add_product">Dodaj produkt</string>
    <string name="edit_product">Edytuj product</string>
    <string name="delete_product">Usuń produkt</string>
    <string name="product_delete_error">Usunięcie produktu nie powiodło się</string>
    <string name="customer_delete_error">Usunięcie klienta nie powiodło się</string>
    <string name="product_save_error">Zapisanie produktu nie powiodło się</string>
    <string name="customer_save_error">Zapisanie klienta nie powiodło się</string>
</resources>
