<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/regular_margin">

    <TextView
            android:id="@+id/item_new_document_position_product_label"
            style="@style/list_item_value_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <Spinner
            android:id="@+id/item_new_document_position_product_spinner"
            style="@style/list_item_value_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/item_new_document_position_product_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_new_document_position_product_label"
            app:layout_constraintTop_toTopOf="@id/item_new_document_position_product_label"/>

    <TextView
            android:id="@+id/item_new_document_position_amount_label"
            style="@style/list_item_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_margin"
            android:padding="2dp"
            android:text="@string/amount_"
            app:layout_constraintEnd_toStartOf="@id/item_new_document_position_amount_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_new_document_position_product_label"/>

    <EditText
        android:id="@+id/item_new_document_position_amount_input"
        style="@style/list_item_value_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:lines="1"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="@id/item_new_document_position_amount_label"
        app:layout_constraintEnd_toStartOf="@id/item_new_document_position_net_price_label"
        app:layout_constraintStart_toEndOf="@id/item_new_document_position_amount_label"
        app:layout_constraintTop_toTopOf="@id/item_new_document_position_amount_label"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/item_new_document_position_net_price_label"
        style="@style/list_item_value_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/net_price"
        app:layout_constraintBottom_toBottomOf="@id/item_new_document_position_amount_label"
        app:layout_constraintStart_toEndOf="@id/item_new_document_position_amount_input"
        app:layout_constraintTop_toTopOf="@id/item_new_document_position_amount_label" />

    <EditText
        android:id="@+id/item_new_document_position_net_price_input"
        style="@style/list_item_value_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:lines="1"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="@id/item_new_document_position_amount_label"
        app:layout_constraintEnd_toStartOf="@id/item_new_document_position_gross_price_label"
        app:layout_constraintStart_toEndOf="@id/item_new_document_position_net_price_label"
        app:layout_constraintTop_toTopOf="@id/item_new_document_position_amount_label"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/item_new_document_position_gross_price_label"
        style="@style/list_item_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/gross_price"
        app:layout_constraintBottom_toBottomOf="@id/item_new_document_position_amount_label"
        app:layout_constraintEnd_toStartOf="@id/item_new_document_position_gross_price_input"
        app:layout_constraintStart_toEndOf="@id/item_new_document_position_net_price_input"
        app:layout_constraintTop_toTopOf="@id/item_new_document_position_amount_label" />

    <EditText
        android:id="@+id/item_new_document_position_gross_price_input"
        style="@style/list_item_value_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:lines="1"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="@id/item_new_document_position_amount_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_new_document_position_gross_price_label"
        app:layout_constraintTop_toTopOf="@id/item_new_document_position_amount_label"
        tools:ignore="Autofill" />

    <ImageView
        android:id="@+id/item_new_document_position_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/regular_margin"
        android:contentDescription="@string/cancel"
        android:padding="@dimen/small_margin"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@id/item_new_document_position_add"
        app:layout_constraintEnd_toStartOf="@id/item_new_document_position_add"
        app:layout_constraintTop_toTopOf="@id/item_new_document_position_add" />

    <ImageView
        android:id="@+id/item_new_document_position_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginEnd="@dimen/regular_margin"
        android:contentDescription="@string/add_document"
        android:src="@drawable/ic_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_new_document_position_net_price_label" />

</androidx.constraintlayout.widget.ConstraintLayout>