<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/regular_margin"
    android:paddingTop="@dimen/small_margin"
    android:paddingEnd="@dimen/regular_margin"
    android:paddingBottom="@dimen/small_margin">

    <EditText
        android:id="@+id/item_new_product_input"
        style="@style/list_item_value_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/regular_margin"
        android:hint="@string/product_name"
        android:inputType="text"
        android:lines="1"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toStartOf="@id/item_new_product_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <ImageView
        android:id="@+id/item_new_product_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/regular_margin"
        android:contentDescription="@string/cancel"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@id/item_new_product_input"
        app:layout_constraintEnd_toStartOf="@id/item_new_product_save"
        app:layout_constraintTop_toTopOf="@id/item_new_product_input" />

    <ImageView
        android:id="@+id/item_new_product_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/save"
        android:src="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="@id/item_new_product_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/item_new_product_input" />

</androidx.constraintlayout.widget.ConstraintLayout>