<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg">

    <TextView
            android:id="@+id/dialog_document_positions_header"
            style="@style/dialog_header_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="@dimen/small_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/dialog_document_positions_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/dialog_document_positions_close"
            tools:text="Document 12"/>

    <ImageView
            android:id="@+id/dialog_document_positions_close"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/close_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/dialog_document_positions_guideline_1"
            app:layout_constraintGuide_percent="0.25"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/dialog_document_positions_guideline_2"
            app:layout_constraintGuide_percent="0.4"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/dialog_document_positions_guideline_3"
            app:layout_constraintGuide_percent="0.7"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

    <TextView
            android:id="@+id/dialog_document_positions_product_name_label"
            style="@style/list_item_label_text"
            android:gravity="bottom"
            android:text="@string/product_name"
            android:lines="2"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_document_positions_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/dialog_document_positions_guideline_1"/>

    <TextView
            android:id="@+id/dialog_document_positions_amount_label"
            style="@style/list_item_label_text"
            android:gravity="bottom"
            android:text="@string/amount"
            android:lines="2"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_document_positions_header"
            app:layout_constraintStart_toStartOf="@id/dialog_document_positions_guideline_1"
            app:layout_constraintEnd_toEndOf="@id/dialog_document_positions_guideline_2"/>

    <TextView
            android:id="@+id/dialog_document_positions_price_label"
            style="@style/list_item_label_text"
            android:text="@string/net_gross_price"
            android:lines="2"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_document_positions_header"
            app:layout_constraintStart_toStartOf="@id/dialog_document_positions_guideline_2"
            app:layout_constraintEnd_toEndOf="@id/dialog_document_positions_guideline_3"/>

    <TextView
            android:id="@+id/dialog_document_positions_value_label"
            style="@style/list_item_label_text"
            android:gravity="bottom"
            android:text="@string/net_gross_value"
            android:lines="2"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_document_positions_header"
            app:layout_constraintStart_toStartOf="@id/dialog_document_positions_guideline_3"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dialog_document_positions_recycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dialog_document_positions_product_name_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/dialog_document_positions"/>

</androidx.constraintlayout.widget.ConstraintLayout>