<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/regular_margin">

    <ImageView
            android:id="@+id/item_document_details"
            android:src="@drawable/ic_details"
            android:contentDescription="@string/edit_document"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginEnd="@dimen/large_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/item_document_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/item_document_id_label"/>

    <ImageView
            android:id="@+id/item_document_edit"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/edit_document"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginEnd="@dimen/large_margin"
            app:layout_constraintTop_toBottomOf="@id/item_document_details"
            app:layout_constraintBottom_toTopOf="@id/item_document_remove"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/item_document_id_label"/>

    <ImageView
            android:id="@+id/item_document_remove"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/edit_document"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/item_document_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/item_document_edit"
            app:layout_constraintEnd_toEndOf="@id/item_document_edit"/>

    <TextView
            android:id="@+id/item_document_id_label"
            style="@style/list_item_label_text"
            android:background="@color/grey"
            android:text="@string/document_id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:padding="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/item_document_id_value"
            app:layout_constraintStart_toEndOf="@id/item_document_edit"
            app:layout_constraintEnd_toStartOf="@id/item_document_id_value"/>

    <TextView
            android:id="@+id/item_document_id_value"
            style="@style/list_item_value_text"
            android:background="@color/grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_document_id_label"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="123"/>

    <TextView
            android:id="@+id/item_document_date_label"
            style="@style/list_item_label_text"
            android:background="@color/grey"
            android:text="@string/document_date"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/item_document_id_value"
            app:layout_constraintBottom_toBottomOf="@id/item_document_date_value"
            app:layout_constraintStart_toStartOf="@id/item_document_id_label"
            app:layout_constraintEnd_toStartOf="@id/item_document_date_value"/>

    <TextView
            android:id="@+id/item_document_date_value"
            style="@style/list_item_value_text"
            android:background="@color/grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/item_document_id_value"
            app:layout_constraintStart_toEndOf="@id/item_document_date_label"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="2019-08-01"/>

    <TextView
            android:id="@+id/item_document_customer_label"
            style="@style/list_item_label_text"
            android:background="@color/grey"
            android:text="@string/customer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/item_document_date_value"
            app:layout_constraintBottom_toBottomOf="@id/item_document_customer_value"
            app:layout_constraintStart_toStartOf="@id/item_document_id_label"
            app:layout_constraintEnd_toStartOf="@id/item_document_customer_value"/>

    <TextView
            android:id="@+id/item_document_customer_value"
            style="@style/list_item_value_text"
            android:background="@color/grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/item_document_date_value"
            app:layout_constraintStart_toEndOf="@id/item_document_customer_label"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="(456) Nazwa klienta"/>

    <TextView
            android:id="@+id/item_document_positions_label"
            style="@style/list_item_label_text"
            android:background="@color/grey"
            android:text="@string/positions_count"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/item_document_customer_value"
            app:layout_constraintBottom_toBottomOf="@id/item_document_positions_value"
            app:layout_constraintStart_toStartOf="@id/item_document_id_label"
            app:layout_constraintEnd_toStartOf="@id/item_document_positions_value"/>

    <TextView
            android:id="@+id/item_document_positions_value"
            style="@style/list_item_value_text"
            android:background="@color/grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/item_document_customer_value"
            app:layout_constraintStart_toEndOf="@id/item_document_positions_label"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="11"/>

    <TextView
            android:id="@+id/item_document_value_label"
            style="@style/list_item_label_text"
            android:background="@color/grey"
            android:text="@string/net_gross_value"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            app:layout_constraintTop_toBottomOf="@id/item_document_positions_value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/item_document_id_label"
            app:layout_constraintEnd_toStartOf="@id/item_document_value_value"/>
    <TextView
            android:id="@+id/item_document_value_value"
            style="@style/list_item_value_text"
            android:background="@color/grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/item_document_positions_value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_document_value_label"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="20.00 zł / 24.60 zł"/>

</androidx.constraintlayout.widget.ConstraintLayout>